[package]
name = "sd_meta_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sd_meta_sorter"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"